# Type-Reconstruction

./: .gitignore  README.md
coq/: Base.v  DeclTyping.v  Env.v  ListLib.v  Maybe.v  Mono.v  MonoComp.v  MonoCompleteness.v  MonoComputable.v  Pair.v  README.md  Sets.v  Term.v  Typ.v  Unify.v  Util.v  _CoqProject  coqrecon.opam
coq/Mono/: Mono.v
coq/Syntax/: Term.v
coq/Unify/: Unify.v
coq/Util/: Env.v  Pair.v
coq/extract/: Extract.v  dune
coq/lib/: dune
coq/lib/Mono/: Completeness.v  Computes.v  Mono.v  README.md
coq/lib/Semantics/: Properties.v  Reduce.v
coq/lib/Syntax/: DeclTyping.v  Term.v  Typ.v
coq/lib/Unify/: Unify.v
coq/lib/Util/: EqDecInst.v  Maybe.v
vtr/: README.md  dune-project  vtr.opam
vtr/coq/: Makefile  README.md  _CoqProject  coqrecon.opam
vtr/coq/extract/: Extract.v  dune
vtr/coq/lib/: dune
vtr/coq/lib/LetPoly/: Properties.v  Typing.v
vtr/coq/lib/Mono/: Completeness.v  Computes.v  Mono.v  MonoAll.v  README.md
vtr/coq/lib/Semantics/: DamasMilner.v  DeclTyping.v  PolyTyp.v  Properties.v  Reduce.v  TypEnv.v
vtr/coq/lib/Syntax/: Syntax.v  Term.v  Typ.v
vtr/coq/lib/Unify/: Properties.v  README.md  Unify.v
vtr/coq/lib/Util/: Env.v  ListEnv.v  ListLib.v  Sets.v  Util.v
vtr/lib/: dune  lexer.mll  parser.mly  run.ml  toString.ml
vtr/samples/: add.lc  add2.lc  id.lc
